[fix] header의z-index값 수정

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -48,7 +48,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 3;
 }
 
 .header_inner {
@@ -132,6 +132,10 @@ header .userdata img {
     gap: 1rem;
 }
 
+.search .searchInner button {
+    cursor: pointer;
+}
+
 .search input {
     width: 100%;
     padding: 1.5rem 1.6rem;
@@ -163,6 +167,7 @@ header .userdata img {
     max-width: 34rem;
     height: 33.4rem;
     border-radius: 1rem;
+    border: 2px solid rgba(0, 0, 0, 0);
     overflow: hidden;
     box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
     margin: 0 auto;
@@ -175,6 +180,10 @@ header .userdata img {
 .card:hover a .cardImgWrap {
     transition: all 1s;
     transform: scale(1.3);
+}
+
+.card:not(hover) a .cardImgWrap {
+    transition: all 1s;
 }
 
 .card .cardImgWrap {
